# new

CS1410/Module_2/Arrays/: CMakeLists.txt  README.md
CS1410/Module_2/Arrays/src/: CMakeLists.txt  arrays.cpp
CS1410/Module_2/Cars/: CMakeLists.txt  README.md
CS1410/Module_2/Cars/src/: cars.cpp  cars.h  main.cpp
CS1410/Module_2/Cars/tests/: CMakeLists.txt  cars_test.cpp
CS1410/Module_2/Functions/: CMakeLists.txt  README.md
CS1410/Module_2/Functions/src/: CMakeLists.txt  arguments.cpp  call_teams.cpp  dodgers.cpp  dodgers.h  function_overload.cpp  functions_part1.cpp  local_global.cpp  main.cpp  ret_values.cpp  yankees.cpp  yankees.h
CS1410/Module_2/Stock_pricing/: CMakeLists.txt  README.md
CS1410/Module_2/Stock_pricing/src/: main.cpp  stock.cpp  stock.h
CS1410/Module_2/Stock_pricing/tests/: CMakeLists.txt  stock_test.cpp
CS1410/Module_2/waldo_and_earthquakes/: CMakeLists.txt  README.md  earthquakes.txt  earthquakes_short.txt  story.txt  updated_story.txt
CS1410/Module_2/waldo_and_earthquakes/src/: CMakeLists.txt  main.cpp  utilities.cpp  utilities.h
CS1410/Module_2/waldo_and_earthquakes/tests/: CMakeLists.txt  utilities_test.cpp
ENGL2010/Module_1/: 9-11-20 WTL.docx  Rosendo_WTL.docx  Rosendo_class_discussion.docx  WTL.docx
Math1010/SS/: Test Taking Strategies for Success.docx
